# 2025-projetoDados

./: .gitignore  README.md  main.py  pyproject.toml
interface/: interface.py
notebooks/: analise_locacoes.ipynb
src/: __init__.py  data_cleaning.py  features.py  models.py  utils.py
tests/: test_tkinter.py
utils/: converte.py
